--- a/views/Admin_Merch_List.ejs
+++ b/views/Admin_Merch_List.ejs
@@ -7,9 +7,9 @@
 <div class="main-panel">
 	 <!-- Navbar -->
    <%- include('./Component/Header.ejs') %>
-<%
 
-%>
+   <% console.log('heheeh', JSON.stringify(getMerchData, null, '\t')) %>
+
    <div class="content">
     <div class="container-fluid">
         <div class="row">
