--- a/views/Admin_Merch_List.ejs
+++ b/views/Admin_Merch_List.ejs
@@ -8,7 +8,7 @@
 	 <!-- Navbar -->
    <%- include('./Component/Header.ejs') %>
 
-   <% console.log('heheeh', JSON.stringify(getMerchData, null, '\t')) %>
+
 
    <div class="content">
     <div class="container-fluid">
@@ -47,7 +47,10 @@
                                   <%
                                   getMerchData.map((element, index)=> {
                                   %>
-                                  <tr>
+                                  <script>
+                                    console.log('element: ', getMerchData);
+                                  </script>
+                                  <!-- <tr>
                                     <td> <%= index+1 %> </td>
                                     <td><img src="<%= element.image[0].src%>" height="50" alt=""></td>
                                     <td><%= element.title%></td>
@@ -74,7 +77,7 @@
                                       View 
                                       </a>
                                     </td>
-                                  </tr>
+                                  </tr> -->
                                   <%
                                   })
                                   %>
