--- a/views/Admin_Merch_List.ejs
+++ b/views/Admin_Merch_List.ejs
@@ -47,16 +47,13 @@
                                   <%
                                   getMerchData.map((element, index)=> {
                                   %>
-                                  <script>
-                                    console.log('element: ', getMerchData);
-                                  </script>
                                   
                                   <%
                                   })
                                   %>
                                 </tbody>
                             </table>
-                            <!-- <%= JSON.stringify(getMerchData)%> -->
+                            <%= JSON.stringify(getMerchData)%>
                         </div>
                     </div>
                 </div>
