--- a/views/Admin_Merch_List.ejs
+++ b/views/Admin_Merch_List.ejs
@@ -53,7 +53,9 @@
                                   %>
                                 </tbody>
                             </table>
-                            <%= JSON.stringify(getMerchData)%>
+                            <pre>
+                              <%= JSON.stringify(getMerchData)%>
+                            </pre>
                         </div>
                     </div>
                 </div>
