--- a/views/Admin_Merch_List.ejs
+++ b/views/Admin_Merch_List.ejs
@@ -50,7 +50,7 @@
                                   <tr>
                                     <td> <%= index+1 %> </td>
                                     <td>
-                                      <!-- <img src="<%= element.image[0].src%>" height="50" alt=""> -->
+                                      image
                                     </td>
                                     <td><%= element.title%></td>
                                     <td>
@@ -82,9 +82,9 @@
                                   %>
                                 </tbody>
                             </table>
-                            <pre>
-                              <%= JSON.stringify(getMerchData)%>
-                            </pre>
+                            
+                            <%= JSON.stringify(getMerchData)%>
+                            
                         </div>
                     </div>
                 </div>
