update in git repository excerpt last two point

--- a/views/AdminUpload.ejs
+++ b/views/AdminUpload.ejs
@@ -263,39 +263,50 @@
                             </div>
                             <div class="col-md-12">
                                 <label for="" class="h4"> Licence Price </label>
+                                <p>Below section are music licence price. In backend by Default we set licence price are song price if you keep it blank. But after publish your song, you can change licence price from "My Music" lists.</p>
                             </div>
                             <div class="col-md-12 table-responsive">
                                 <table class="table" id="example_0" class="table  " style="width:100%; border: none;" >
                                     <thead>
                                         <tr>
-                                            <th> Sn. </th>
                                             <th>Licence</th>
+                                            <th>Price</th>
                                      </tr>
                                     </thead>
                                     <tbody>                        
                                         <tr>
-                                            <td>1</td>
-                                            <td><input type="text" value="Buy mp3" disabled ></td>                 
+                                            <td>Buy mp3</td>                 
+                                            <td>
+                                                <input type="number" name="variant_prices[]" id="variant_prices_0" class="form-control">
+                                            </td>
                                         </tr>
                                         <tr>
-                                            <td>2</td>
-                                            <td><input type="text" value="Non-exclusive" disabled ></td>                 
+                                            <td>Non-exclusive</td>                 
+                                            <td>                
+                                                <input type="number" name="variant_prices[]" id="variant_prices_1" class="form-control">
+                                            </td>
                                         </tr>
                                         <tr>
-                                            <td>3</td>
-                                            <td><input type="text" value="Exclusive" disabled ></td>                 
+                                            <td>Exclusive</td>                 
+                                            <td><input type="number" name="variant_prices[]" id="variant_prices_2" class="form-control"></td>
                                         </tr>
                                         <tr>
-                                            <td>4</td>
-                                            <td><input type="text" value="TV/FILM" disabled ></td>                 
+                                            <td>TV/FILM</td>                 
+                                            <td>
+                                                <input type="number" name="variant_prices[]" id="variant_prices_3" class="form-control">
+                                            </td>
                                         </tr>
                                         <tr>
-                                            <td>5</td>
-                                            <td><input type="text" value="free download" disabled ></td>                 
+                                            <td>Free download</td>                 
+                                            <td>
+                                                <input type="number" name="variant_prices[]" id="variant_prices_4" class="form-control">
+                                            </td>
                                         </tr>
                                         <tr>
-                                            <td>6</td>
-                                            <td><input type="text" value="Royalty free" disabled ></td>                 
+                                            <td>Royalty free</td>                 
+                                            <td>
+                                                <input type="number" name="variant_prices[]" id="variant_prices_5" class="form-control">
+                                            </td>
                                         </tr>
                                     </tbody>
                                 </table>
