--- a/views/Admin_View_Music.ejs
+++ b/views/Admin_View_Music.ejs
@@ -442,7 +442,7 @@
             $(`#update_var_id_${sn}`).html("Update");
                 console.log(result);
                 if(result.message == "flag1"){
-                    alert("New Price Updated !")
+                    $(`#update_var_id_${sn}`).html("Updated");
                 }
             }
         })
