--- a/views/Component/Sidebar.ejs
+++ b/views/Component/Sidebar.ejs
@@ -65,7 +65,7 @@
           </a>
         </li>
 
-        <li class="nav-item withdraw_li active-pro ">
+        <li class="nav-item withdraw_li ">
             <a class="nav-link plan_link" href="/artist/withdraw">
               <i class="material-icons">paid</i>
               <p>Withdraw</p>
