--- a/public/stylesheets/mainIndex/music.css
+++ b/public/stylesheets/mainIndex/music.css
@@ -1,18 +1,106 @@
+@import url('https://fonts.googleapis.com/css2?family=Arima+Madurai:wght@700&family=Gotu&display=swap');
+
 *{
     margin:0;
     padding: 0;
-    font-family: 'Josefin Sans', sans-serif !important;
+    font-family: 'Gotu', Helvetica, 'Helvetica Neue', Arial, 'Lucida Grande', sans-serif;
+}
+h1, h2, h3, h4, h5, h6 
+{
+    font-family: 'Arima Madurai', Helvetica, 'Helvetica Neue', Arial, 'Lucida Grande', sans-serif;
 }
 
 body{
-    font-family: 'Josefin Sans', sans-serif;
+    font-family: 'Gotu', Helvetica, 'Helvetica Neue', Arial, 'Lucida Grande', sans-serif;
 }
 .header{
     height: 650px;
-    background: url("/images/mainIndex/main-bg-image.jpg") center center  ;
-    background-size: cover;
     /* background: linear-gradient(0deg,#2b2d3a 10%,transparent); */
+}
 
+/* HEro section */
+.hero-image {
+    position: absolute;
+    right: -110px;
+    top: 0;
+    width: 53%;
+    z-index: 1;
+    padding: 0 0 7px 7px;
+    transform: rotate(-16deg);
+}
+.rectangle-shape {
+    position: absolute;
+    transform: rotate(-16deg);
+    z-index: -1;
+    background: #4c38cb;
+}
+
+.rectangle-shape.shape-1 {
+    width: 224px;
+    height: 190px;
+    left: -17px;
+    top: -168px;
+    border-radius: 43px;
+}
+.rectangle-shape.shape-2 {
+    width: 121px;
+    height: 103px;
+    left: -160px;
+    top: 61px;
+    border-radius: 32px;
+}
+.rectangle-shape.shape-3 {
+    width: 86px;
+    height: 73px;
+    left: -112px;
+    top: 260px;
+    border-radius: 21px;
+}
+.rectangle-shape.shape-4 {
+    width: 86px;
+    height: 73px;
+    left: -357px;
+    top: 320px;
+    border-radius: 21px;
+    background-color: #422ec7;
+}
+header.header:after {
+    position: absolute;
+    width: 200%;
+    top: 0;
+    bottom: 0;
+    left: -100%;
+    content: "";
+    transform: skew(0,350deg);
+    background-color: #5744cf;
+}
+
+.hero-nav {
+    position: relative;
+    z-index: 1;
+}
+.b-radius-35,
+.card.b-radius-35{
+    border-radius: 35px;
+}
+.round-before{position:relative;}
+.round-before::before{
+        left: 40px;
+        right: 40px;
+        bottom: -20px;
+        top: 40px;
+        z-index: 0;
+        content: "";
+        position: absolute;
+        background: #FFFFFF;
+        opacity: .7;
+        border: 1.14307px solid #FFFFFF;
+        box-shadow: 34.292px 80.0147px 137.168px #1b31420d;
+        backdrop-filter: blur(8.00147px);
+        border-radius: 55.9155px;
+}
+.round-before > div{
+    z-index: 1;
 }
 .form-control{
     background-image: none !important;
@@ -22,6 +110,7 @@ body{
     /* border: 2px solid wheat; */
     /* position: sticky;
     top: 0; */
+    z-index: 1;
 }
 .header .navbar ul{
     list-style: none;
@@ -54,30 +143,86 @@ body{
 .header .hero-nav .form-buttons{
    display: flex;
    justify-content: center;
+   gap: 20px;
 }
-.form-buttons .btnns{
-    padding: 15px 28px;
+
+.subs_btn{
+    padding: 10px 28px;
     border-radius: 2px;
-    border: none;
-    background: #c02afe linear-gradient(90deg,#c02afe,#562afe);
+    background: linear-gradient(306.64deg,rgba(255,41,105,.35) 27.07%,rgba(247,122,28,.35) 71.29%),#F4748B;
     color: #FFF;
     margin-left: 10px;
     cursor: pointer;
     outline: none;
     font-size: 1rem;
-    font-family: 'Josefin Sans', sans-serif;
-}.form-buttons .btnns1{
+    border: 1px solid #F6753E;
+    box-shadow: 0 48.2439px 89.7561px #f95a8073;
+    border-radius: 120px;
+    position: relative;
+}
+.form-buttons .btnns{
+    display: inline-block;
+    padding: 13px 45px;
+    font-size: 15px;
+    color: #fff;
+    position: relative;
+    font-weight: 600;
+    line-height: 1.2;
+    background: linear-gradient(306.64deg,rgba(255,41,105,.35) 27.07%,rgba(247,122,28,.35) 71.29%),#F4748B;
+    border: 1px solid #F6753E;
+    box-shadow: 0 48.2439px 89.7561px #f95a8073;
+    border-radius: 120px;
+}
+
+.subs_btn:focus,
+.btnns:focus{
+    outline: unset;
+}
+.subs_btn:after,
+.btnns1:after,
+.btnns:after {
+    left: -6px;
+    top: -6px;
+    right: -6px;
+    bottom: -6px;
+    content: "";
+    position: absolute;
+    border: 1px solid;
+    border-radius: 120px;
+}
+.subs_btn:after,
+.btnns:after{
+    border-color: #F95A80;
+}
+.btnns1:after{
+    border-color: white;
+}
+
+
+
+
+.bmd-form-group input,
+.form-buttons .btnns1{
     padding: 15px 28px;
-    border-radius: 2px;
     border: 2px solid #FFF;
     background:none;
     color: #FFF;
-    margin-left: 10px;
+    position: relative;
     cursor: pointer;
     outline: none;
     font-size: 1rem;
-    font-family: 'Josefin Sans', sans-serif;
-
+    box-shadow: 0 48.2439px 89.7561px #f95a8073;
+    border-radius: 120px;
+}
+.signinForm .bmd-form-group input{
+    box-shadow: unset;
+    border-width: 1px;
+    border-color: #666;
+}
+.signinForm .bmd-form-group.is-focused input,
+.signinForm .bmd-form-group.is-focused input[type="password"]:focus,
+.signinForm .bmd-form-group input[type="email"]:focus{
+    border-color: #999;
 }
 .artist_hero{
     height: 300px;
@@ -143,18 +288,7 @@ body{
 .servises h2{
     display: flex;
 }
-.subs_btn{
-    padding: 15px 28px;
-    border-radius: 2px;
-    border: none;
-    background: #c02afe linear-gradient(90deg,#c02afe,#562afe);
-    color: #FFF;
-    margin-left: 10px;
-    cursor: pointer;
-    outline: none;
-    font-size: 1rem;
-    font-family: 'Josefin Sans', sans-serif;
-}
+
 .contact_us .cantact_list ul{
     list-style: none;
     margin-top: 20px;
@@ -169,10 +303,13 @@ body{
 .contact_us .cantact_list ul li{
     padding-top: 12px;
 }
+
+
 /* MODEL Css*/
-.w3-modal{
+.w3-modal:not(.bg-white){
     background-color: #00000099 !important;
 }
+
 .w3-modal-content {
     width: 650px;
 }
@@ -214,12 +351,14 @@ body{
     transition: .2s;
 }
 .closemodel_signUp{
+    background: #6f1239;
+}
+.closemodel_signUp{
     padding: 4px 13px;
     position: relative;
     float: right;
     top: -25px;
     right: -30px;
-    background: #6f1239;
     border-radius: 50%;
 }
 .model_header h2{
