--- a/views/AdminDashboard.ejs
+++ b/views/AdminDashboard.ejs
@@ -20,7 +20,7 @@
         <div class="container-fluid">
 			<div class="row dashboard_status_row">
             <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6">
-              <div class="card card-stats">
+              <div class="card card-stats bg-light-gray">
                 <div class="card-header card-header-warning card-header-icon"  >
                   <div class="card-icon">
                     <i class="material-icons">paid</i>
@@ -36,7 +36,7 @@
               </div>
             </div>
             <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6">
-              <div class="card card-stats">
+              <div class="card card-stats bg-light-gray">
                 <div class="card-header card-header-info card-header-icon">
                   <div class="card-icon">
                     <i class="material-icons">list_alt</i>
@@ -52,7 +52,7 @@
               </div>
             </div>
             <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6">
-              <div class="card card-stats">
+              <div class="card card-stats bg-light-gray">
                 <div class="card-header card-header-primary card-header-icon">
                   <div class="card-icon">
                     <i class="material-icons">library_music</i>
@@ -68,7 +68,7 @@
               </div>
             </div>
             <div class="col-xl-3 col-lg-6 col-md-6 col-sm-6">
-              <div class="card card-stats">
+              <div class="card card-stats bg-light-gray">
                 <div class="card-header card-header-success card-header-icon">
                   <div class="card-icon">
                     <i class="material-icons">album</i>
