--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,6 +10,16 @@
 
 <div class="wrapper">
     <header class="header" >
+      <!-- Hero Secton BG -->
+      <div class="hero-image">
+        <div class="rectangle-shape shape-1"></div>
+        <div class="rectangle-shape shape-2"></div>
+        <div class="rectangle-shape shape-3"></div>
+        <div class="rectangle-shape shape-4"></div>
+      </div>
+
+
+
         <nav class="navbar" style="background: none !important; box-shadow: none;" >
             <ul>
                 <li> 
@@ -40,56 +50,12 @@
   </div>
 
 </div>
-<div class="row append_top_music" id="append_top_music">
-<!--     
-    <div class="col-md-4">
-        <div class="card user-card">
-            <div class="card-header">
-                <h5>Artist</h5>
-            </div>
-            <div class="card-block">
-                <div class="user-image">
-                    <img src="https://img.apmcdn.org/871dda86bfe2251e4fe5514562da006647a8115d/uncropped/df6bb3-20110211-bob-marley.jpg" class="img-radius" alt="User-Profile-Image">
-                </div>
-                <h6 class="f-w-600 m-t-25 m-b-10">Bob Marley</h6>
-                <p class="text-muted">Artist | Male | Jamaica</p>
-                <hr>
-                <p class="text-muted m-t-15">Track Level: 80%</p>
-                <ul class="list-unstyled activity-leval">
-                    <li class="active"></li>
-                    <li class="active"></li>
-                    <li class="active"></li>
-                    <li></li>
-                    <li></li>
-                </ul>
-                <div class="bg-c-blue counter-block m-t-10 p-20">
-                    <div class="row">
-                        <div class="col-4">
-                            <i class="fa fa-comment"></i>
-                            <p>1256</p>
-                        </div>
-                        <div class="col-4">
-                            <i class="fa fa-user"></i>
-                            <p>8562</p>
-                        </div>
-                        <div class="col-4">
-                            <i class="fa fa-suitcase"></i>
-                            <p>189</p>
-                        </div>
-                    </div>
-                </div>
-                <p class="m-t-15 text-muted">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-                <hr>
-                <div class="row justify-content-center user-social-link">
-                    <div class="col-auto"><a href="#!"><i class="fa fa-facebook text-facebook"></i></a></div>
-                    <div class="col-auto"><a href="#!"><i class="fa fa-twitter text-twitter"></i></a></div>
-                    <div class="col-auto"><a href="#!"><i class="fa fa-dribbble text-dribbble"></i></a></div>
-                </div>
-            </div>
-        </div>
+<div class="append_top_music">
+    <div class="container">
+      <div class="row" id="append_top_music">
+        
+      </div>
     </div>
-     -->
-   
 </div>
 </div>
     <!--  -->
@@ -235,11 +201,11 @@
 </div>
 <!-- Model End -->
    <!-- Sign Up Model -->
-   <div id="id02" class="w3-modal w3-animate-opacity"  style="display: none !important;">
-    <div class="w3-modal-content w3-card-4">
+   <div id="id02" class="w3-modal w3-animate-opacity signinForm"  style="display: none !important;">
+    <div class="w3-modal-content w3-card-4 bg-white">
       <header class="w3-container model_header"> 
         <span onclick="document.getElementById('id02').style.display='none'" 
-        class="w3-button w3-large w3-display-topright closemodel_signUp ">&times;</span>
+        class="w3-button w3-large w3-display-topright closemodel_signUp bg-secondary">&times;</span>
         <h2 > 
             <img src="/images/admin/logo2.png" style="height: 60px;" alt="">  
    
@@ -247,16 +213,16 @@
       </header>
       <div class="w3-container">
        <div class="row form_signup_conatiner">
-           <div class="col-md-12">
-                <label for=""> Email </label>
-                <input type="text" placeholder="Email" value="" id="signInEmail" class="form-control" >
+           <div class="col-md-12 text-dark">
+                <label class="text-dark" for=""> Email </label>
+                <input type="text" placeholder="Email" value="" id="signInEmail" class="form-control text-dark" >
            </div>
            <div class="col-md-12 mt-2">
-            <label for=""> Password </label>
-            <input type="password" placeholder="Password" value="" id="signInPassword" class="form-control" >
+            <label class="text-dark" for=""> Password </label>
+            <input type="password" placeholder="Password" value="" id="signInPassword" class="form-control text-dark" >
           </div>
           <div class="col-md-12 mt-4 signupbtn">
-            <input type="submit" value="Sign In" id="signInBtnnn" class="form-control" >
+            <input type="submit" value="Sign In" id="signInBtnnn" class="form-control text-white bg-secondary" >
           </div>
 
        </div>
@@ -324,15 +290,13 @@ function forgetPassBtn(){
 async function getTopmusic(){
     let getTopMus = await fetch(`/shopify/most/viewed/music`);
     let data = await getTopMus.json();
-   // console.log(data);
     if(data.message == "flag1"){
       let mapData = data.data;
-        console.log(mapData);
         let percent = 100;
         mapData.forEach((element, index)=> {
            percent = percent - (index * 2);
            console.log(percent);
-            let strHtml = `<div class="col-md-4 "><div class="card user-card"><div class="card-header"><h5></h5></div><div class="card-block artist_top_view"><div class="user-image"> <img src="${element?.MusicImage}" class="img-radius" alt="User-Profile-Image"></div><h6 class="f-w-600 m-t-25 m-b-10 text-white">${element?.ArtistName}</h6><p class="text-white">Artist | ${element?.Country}</p><hr><p class="text-white m-t-15">Track Level: ${percent}%</p><ul class="list-unstyled activity-leval">
+            let strHtml = `<div class="col-md-4 "><div class="card bg-white b-radius-35 round-before user-card"><div class="card-block artist_top_view"><div class="user-image"> <img src="${element?.MusicImage}" class="img-radius" alt="User-Profile-Image"></div><h6 class="f-w-600 m-t-25 m-b-10 text-dark">${element?.ArtistName}</h6><p class="text-dark">Artist | ${element?.Country}</p><hr><p class="text-dark m-t-15">Track Level: ${percent}%</p><ul class="list-unstyled activity-leval">
                 <li class="active"></li>
                 <li class="active"></li>
                 <li class="${percent >= 55 ? 'active' : ''}"></li>
