--- a/views/AdminUpload.ejs
+++ b/views/AdminUpload.ejs
@@ -263,7 +263,7 @@
                             </div>
                             <div class="col-md-12">
                                 <label for="" class="h4"> Licence Price </label>
-                                <p>Below section are music licence price. In backend by Default we set licence price are song price if you keep it blank. But after publish your song, you can change licence price from "My Music" lists.</p>
+                                <p>The below section is where you will see your music licence prices. By default, we set the licence price as the song price if you keep it blank. But after publishing your song, you can change the licence price from the "My Music" lists.</p>
                             </div>
                             <div class="col-md-12 table-responsive">
                                 <table class="table" id="example_0" class="table  " style="width:100%; border: none;" >
