--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -367,16 +367,20 @@ header.header:after {
     transform: skew(0,350deg);
     background-color: #5744cf;
 }
-.sidebar:after {
-    position: absolute;
-    width: 200%;
-    top: 0;
-    bottom: 0;
-    left: -100%;
-    content: "";
-    transform: skew(0,350deg);
-    background-color: #5744cf;
+
+@media only screen and (min-width: 990px) {
+    .sidebar:after {
+        position: absolute;
+        width: 200%;
+        top: 0;
+        bottom: 0;
+        left: -100%;
+        content: "";
+        transform: skew(0,350deg);
+        background-color: #5744cf;
+    }    
 }
+
 
 
 ul#options_hold li p{
