--- a/public/assets/css/dashboard.css
+++ b/public/assets/css/dashboard.css
@@ -389,3 +389,8 @@ ul#options_hold li p{
 ul#options_hold li {
     gap: 8px;
 }
+.gap-1{gap: 1rem}
+.gap-2{gap: 2rem}
+.gap-3{gap: 3rem}
+.gap-4{gap: 4rem}
+.gap-5{gap: 5rem}
