update second pass

--- a/views/Admin_Merch_View.ejs
+++ b/views/Admin_Merch_View.ejs
@@ -153,7 +153,7 @@
                                                         <input type="text" class="small_input"  value="<%= element.barcode%>" id="barcode_<%= index+1%>" />
                                                     </td>
                                                     <td>
-                                                        <input type="file" id="merch_Image_<%= index+1%>" />
+                                                        <input type="file" accept=".jpeg,.jpg,.png" id="merch_Image_<%= index+1%>" />
                                                     </td>
                                                     <td>
                                                         <input type="hidden" value="<%= element.id%>" id="varient_id_<%= index+1%>" />
