--- a/views/Admin_Upload_Merch.ejs
+++ b/views/Admin_Upload_Merch.ejs
@@ -168,8 +168,8 @@
                 getAllOPtionsValue.push(optionsValues.split(','));
             }
 
-            console.log(getAllOPtions);
-            console.log(getAllOPtionsValue);
+            // console.log(getAllOPtions);
+            // console.log(getAllOPtionsValue);
             let description = CKEDITOR.instances.editor_description.getData();
             let title = document.getElementById("title");
             let list = document.getElementById('merch_list').value;
